--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.activity:activity-ktx:1.5.0-alpha01'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -59,10 +61,6 @@ dependencies {
 
     //Preference
     implementation 'androidx.preference:preference-ktx:1.1.1'
-
-    //donut
-    implementation("app.futured.donut:donut:2.2.0")
-    implementation("app.futured.donut:donut-compose:2.2.0")
 
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
